--- a/src/scss/simple-passwords.css
+++ b/src/scss/simple-passwords.css
@@ -11951,6 +11951,14 @@ fieldset:disabled .btn {
   }
 }
 
+html {
+  background-color: #212529;
+}
+
+#root {
+  background-color: #212529;
+}
+
 .card-body {
   background-color: #343a40;
 }
@@ -11997,7 +12005,8 @@ fieldset:disabled .btn {
   color: #e9ecef;
 }
 
-.avatar-gradient {
+.gradient-panel-end {
   background-image: radial-gradient(farthest-side at 80% 50%, rgba(33, 37, 41, 0.25), transparent);
+  border-right: 1px solid #343a40;
 }
 /*# sourceMappingURL=simple-passwords.css.map */
